Third commit, add wrong_answer

--- a/web/templates/base.html
+++ b/web/templates/base.html
@@ -15,7 +15,7 @@
 </head>
 <body background = "media\images\2.jpg">
 {% block main  %}
-<div class="container-fluir">
+<div class="container-fluid">
     <div class="row" style="background-color:#17a2b8!important" >
             <div class="col-6 col-sm-6 col-md-6 col-lg-6 col-xl-6">
                <h3 >  <a style="color:white; padding-left:10px" href="{% url 'registration:index' %}">Mathematics</a> </h3>
